# housing

./: README.md  html_example.html  makefile  pyproject.toml
housing/: common.py  config.py  db.py  flatfox.py  flatfox_files_to_db.py  homegate.py  homegate_old.py  main.py  models.py  selenium_utils.py
housing/api/v1/: __init__.py  health_check.py  listings.py
housing/cli/: listings.py  main.py  scrape.py
housing/client/: __init__.py  client.py
scrapy_housing/: makefile  scrapy.cfg
scrapy_housing/scrapy_housing/: items.py  middlewares.py  pipelines.py  settings.py
scrapy_housing/scrapy_housing/spiders/: flatfox.py  homegate.py
