[tool.poetry]
name = "housing"
version = "0.1.0"
description = "TDD best practices"
authors = [ "Benjamin Labrecque" ]
packages = [
    { include = "housing" }
]

[tool.poetry.dependencies]
python = "^3.8"
typer = "^0.7.0"
beautifulsoup4 = "^4.12.0"
requests = "^2.28.2"
black = "^23.1.0"
pendulum = "^2.1.2"
pydantic = "^1.10.7"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"

[tool.mypy]
files = "housing"
strict = true
namespace_packages = true
explicit_package_bases = true