[tool.poetry]
name = "housing"
version = "0.1.0"
description = "TDD best practices"
authors = [ "Benjamin Labrecque" ]
packages = [
    { include = "housing" }
]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
typer = "^0.7.0"
beautifulsoup4 = "^4.12.0"
requests = "2.28.2"
black = "^23.1.0"
pydantic = "^1.10.7"
python-dotenv = "^1.0.0"
rich = "^13.3.2"
pendulum = "3.0.0b1"
ipython = "^8.16.0"
selenium = "4.12.0"
lxml = "^4.9.3"
cloudscraper = "^1.2.71"
scrapy = "^2.11.0"
scrapy-cloudflare-middleware = "^0.0.1"
selenium-stealth = "^1.0.6"
undetected-chromedriver = "3.5.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
mypy = "^1.1.1"
isort = "^5.12.0"
types-requests = "^2.28.11.16"
types-beautifulsoup4 = "^4.12.0.0"

[tool.mypy]
files = "housing"
strict = true
namespace_packages = true
explicit_package_bases = true

[tool.isort]
profile = "black"
