[tool.poetry]
name = "housing"
version = "0.1.0"
description = "Data from the Swiss housing market"
authors = [ "Benjamin Labrecque" ]
packages = [
    { include = "housing" }
]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
typer = "^0.7.0"
beautifulsoup4 = "^4.12.0"
requests = "2.28.2"
pydantic = "^1.10.7"
python-dotenv = "^1.0.0"
rich = "^13.3.2"
pendulum = "3.0.0b1"
ipython = "^8.16.0"
selenium = "4.12.0"
lxml = "^4.9.3"
cloudscraper = "^1.2.71"
scrapy = "^2.11.0"
scrapy-cloudflare-middleware = "^0.0.1"
selenium-stealth = "^1.0.6"
undetected-chromedriver = "3.5.3"
sqlmodel = "^0.0.12"
fastapi = "^0.104.1"
hypercorn = "^0.15.0"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
pytest = "^7.2.1"
mypy = "^1.1.1"
isort = "^5.12.0"
types-requests = "^2.28.11.16"
types-beautifulsoup4 = "^4.12.0.0"
# Supposedly quite fast, but need to figure out how to make it work with Neovim
ruff = "^0.1.5"

[tool.poetry.scripts]
housing = "housing.cli.main:housing"

[tool.mypy]
files = "housing"
strict = true
namespace_packages = true
explicit_package_bases = true

# [tool.isort]
# profile = "black"

[tool.ruff.lint]
select = [
    # pycodestyle
    # "E",
    # Pyflakes
    # "F",
    # pyupgrade
    # "UP",
    # flake8-bugbear
    # "B",
    # flake8-simplify
    # "SIM",
    # isort
    "I",
]
fixable = ["I"]

[tool.ruff.lint.isort]
known-first-party = ["housing"]
